--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,4 +18,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+
+    <com.xinghai.widget.bezelimageview.BezelImageView
+        android:id="@+id/bezelImageView"
+        android:layout_width="156dp"
+        android:layout_height="156dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAccessibility="no"
+        android:scaleType="centerCrop"
+        app:borderDrawable="@drawable/circle_border"
+        app:maskDrawable="@drawable/circle_mask"
+        app:srcCompat="@drawable/ic_launcher_background"/>
+
 </android.support.constraint.ConstraintLayout>
