--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,15 +18,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-
     <com.xinghai.widget.bezelimageview.BezelImageView
         android:id="@+id/bezelImageView"
-        android:layout_width="156dp"
-        android:layout_height="156dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="8dp"
         android:importantForAccessibility="no"
         android:scaleType="centerCrop"
         app:borderDrawable="@drawable/circle_border"
